--- a/src/Machine/Machine.module.css
+++ b/src/Machine/Machine.module.css
@@ -1,15 +1,13 @@
-
-
-.machine > *, .idkWhatToCallThis > *  {
+.machine > *,
+.idkWhatToCallThis > * {
     margin: 5px;
 }
 
 .buttonList > * {
-    margin: 5px
+    margin: 5px;
 }
 
 .idkWhatToCallThis {
     display: flex;
     flex-direction: row;
 }
-
